SWU-69 - Fixed a minor layout bug

--- a/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
+++ b/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
@@ -361,8 +361,6 @@
       grid-row-start: 2;
       grid-template-columns: 258px 1fr;
       grid-template-rows: auto auto; // IE11 compatibility
-      margin-left: 258px;
-      width: calc(100% - 258px);
 
       > * {
         align-self: start;
